<resources>
    <string name="app_name">音乐</string>

    <string name="music_service_permission">permission.ccbfm.music.player.service</string>

    <string name="music_menu_timing">定时关闭</string>
    <string name="music_menu_exit">退出</string>
    <string name="music_menu_play_mode">播放模式</string>
    <string name="music_menu_sound_settings">音效设置</string>

    <string name="music_scanning_clear">清除</string>
    <string name="music_blacklist">黑名</string>
    <string name="music_scanning">扫描</string>
    <string name="music_select_directory">选择目录</string>
    <string name="music_control_play">播放</string>
    <string name="music_control_pause">暂停</string>

    <string name="music_select_folder">选择扫描的目录</string>
    <string name="music_back_root_path">返回根目录</string>
    <string name="music_back_pre">返回上一层</string>

    <string name="music_cancel">取消</string>
    <string name="music_confirm">确认</string>

    <string name="music_create_playlist">新建列表</string>
    <string name="music_create_playlist_edit">编辑列表</string>
    <string name="music_create_playlist_name_hint">请输入列表名字</string>

    <string name="music_delete_song_1">是否将选择的音乐从列表中删除并拉黑</string>
    <string name="music_delete_song_2">是否将选择的音乐从列表中移除</string>

    <string name="music_delete_playlist">是否删除选中列表</string>

    <string name="music_blacklist_name">黑名单</string>
    <string name="music_restore_hint">是否将选择的音乐从黑名单中恢复</string>

    <string name="music_permission_hint">是否去设置中打开所需权限</string>

    <string name="music_scanning_album_to_playlist">专辑生成歌单列表</string>

    <string name="music_touch_the_fish">&#60;&#60;&#60;%1$s摸鱼中&#62;&#62;&#62;"</string>
</resources>
