<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="createPlaylistModel"
            type="com.ccbfm.music.player.data.model.CreatePlaylistModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp"
            android:divider="@color/color_f2f2f2"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/music_create_playlist" />

            <EditText
                android:id="@+id/music_create_playlist_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textSize="16sp"
                android:hint="@string/music_create_playlist_name_hint"
                android:text="@={createPlaylistModel.playlistName}"
                android:singleLine="true" />

            <ListView
                android:id="@+id/music_create_playlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adapter="@{createPlaylistModel.createPlaylistAdapter}"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="selectCancel"
                android:text="@string/music_cancel" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="selectConfirm"
                android:text="@string/music_confirm" />
        </LinearLayout>
    </FrameLayout>
</layout>