<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="selectFolderModel"
            type="com.ccbfm.music.player.data.model.SelectFolderModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp"
            android:divider="@color/color_f2f2f2"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:text="@string/music_select_folder"
                android:textColor="@color/color_f2f2f2"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:ellipsize="start"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:text="@{selectFolderModel.rootPath}"
                android:textColor="@color/color_f2f2f2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/music_back_root_path"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:drawableStart="@drawable/ic_back_root_asset_24dp"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:onClickListener="@{selectFolderModel}"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/music_back_root_path"
                android:textColor="@color/color_f2f2f2"
                android:textSize="16sp"
                android:visibility="@{selectFolderModel.backVisible}" />

            <TextView
                android:id="@+id/music_back_pre"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:drawableStart="@drawable/ic_back_pre_asset_24dp"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:onClickListener="@{selectFolderModel}"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/music_back_pre"
                android:textColor="@color/color_f2f2f2"
                android:textSize="16sp"
                android:visibility="@{selectFolderModel.backVisible}" />

            <ListView
                android:id="@+id/music_select_directory_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adapter="@{selectFolderModel.selectFolderAdapter}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="selectCancel"
                android:text="@string/music_cancel"
                android:textColor="@color/color_515151"
                android:textSize="16sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="selectConfirm"
                android:text="@string/music_confirm"
                android:textColor="@color/color_515151"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>
</layout>